syntax = "proto3";

package vps;

service Vps {
	rpc Call(Request) returns (Response) {}
	rpc NewNode(Request) returns (Response) {}
	rpc DelNode(Request) returns (Response) {}
	rpc GetNode(Request) returns (Response) {}
	
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	int64 userId = 1;
	int64 id = 2;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	bytes mix = 3;	
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
